--- a/projectQuotesWebApi.Application.Services/projectQuotesWebApi.Application.Services.csproj
+++ b/projectQuotesWebApi.Application.Services/projectQuotesWebApi.Application.Services.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\projectQuotes.Dtos\projectQuotes.Dtos.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Relations\" />
+  </ItemGroup>
+
 </Project>
