--- a/projectQuotes.IntegrationTests/appsettings.json
+++ b/projectQuotes.IntegrationTests/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=projectQuotes;Username=postgres;Password=root"
+    "DefaultConnection": "Host=localhost;Database=projectQuotes;Username=;Password="
   },
   "Jwt": {
     "Key": "test",
