--- a/projectQuotes.IntegrationTests/projectQuotes.IntegrationTests.csproj
+++ b/projectQuotes.IntegrationTests/projectQuotes.IntegrationTests.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <RunSettingsFilePath>D:\Codes\ASP.NET\projectQuotesWebApi\projectQuotes.IntegrationTests\bin\Debug\net9.0\fine-code-coverage\coverage-tool-output\projectQuotes.IntegrationTests-fcc-mscodecoverage-generated.runsettings</RunSettingsFilePath>
   </PropertyGroup>
 
   <ItemGroup>
