--- a/.github/workflows/projectQuotesWebApi.yml
+++ b/.github/workflows/projectQuotesWebApi.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
     - master
+permissions:
+  id-token: write
+  contents: read
 env:
   AZURE_WEBAPP_NAME: projectQuotesWebApi
   AZURE_WEBAPP_PACKAGE_PATH: projectQuotesWebApi/publish
