--- a/.github/workflows/projectQuotesWebApi.yml
+++ b/.github/workflows/projectQuotesWebApi.yml
@@ -46,8 +46,12 @@ jobs:
     - name: Install Swashbuckle CLI .NET Global Tool
       run: dotnet tool install --global Swashbuckle.AspNetCore.Cli --version ${{ env.SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION }}
       working-directory: ${{ env.WORKING_DIRECTORY }}
-    - name: Generate Open API Specification Document
-      run: swagger tofile --output "${{ env.API_IMPORT_SPECIFICATION_PATH }}" "${{ env.API_IMPORT_DLL }}" "${{ env.API_IMPORT_VERSION }}"
+    - name: Build API for Swagger generation
+      run: dotnet build ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }}
+    - name: Generate swagger.json
+      run: |
+        mkdir -p ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        dotnet run --project ${{ env.WORKING_DIRECTORY }} --no-build --configuration ${{ env.CONFIGURATION }} -- swagger-json ${{ env.API_IMPORT_SPECIFICATION_PATH }}
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
