--- a/.github/workflows/projectQuotesWebApi.yml
+++ b/.github/workflows/projectQuotesWebApi.yml
@@ -46,6 +46,9 @@ jobs:
     - name: Install Swashbuckle CLI .NET Global Tool
       run: dotnet tool install --global Swashbuckle.AspNetCore.Cli --version ${{ env.SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION }}
       working-directory: ${{ env.WORKING_DIRECTORY }}
+    - name: Create appsettings.json
+      run: |
+        echo '${{ secrets.APPSETTINGS_JSON_CONTENT }}' > ${{ env.WORKING_DIRECTORY }}/appsettings.json
     - name: Build API for Swagger generation
       run: dotnet build ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }}
     - name: Generate swagger.json
