--- a/.github/workflows/projectQuotesWebApi.yml
+++ b/.github/workflows/projectQuotesWebApi.yml
@@ -49,12 +49,11 @@ jobs:
     - name: Create appsettings.json
       run: |
         echo '${{ secrets.APPSETTINGS_JSON_CONTENT }}' > ${{ env.WORKING_DIRECTORY }}/appsettings.json
-    - name: Build API for Swagger generation
-      run: dotnet build ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }}
-    - name: Generate swagger.json
+    - name: Generate Open API Specification Document
       run: |
-        mkdir -p ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-        dotnet run --project ${{ env.WORKING_DIRECTORY }} --no-build --configuration ${{ env.CONFIGURATION }} -- swagger-json ${{ env.API_IMPORT_SPECIFICATION_PATH }}
+        mkdir -p $(dirname "${{ env.API_IMPORT_SPECIFICATION_PATH }}")
+        dotnet swagger tofile --output "${{ env.API_IMPORT_SPECIFICATION_PATH }}" "${{ env.API_IMPORT_DLL }}" "${{ env.API_IMPORT_VERSION }}"
+        working-directory: ${{ env.WORKING_DIRECTORY }}
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
