--- a/.github/workflows/projectQuotesWebApi.yml
+++ b/.github/workflows/projectQuotesWebApi.yml
@@ -49,11 +49,6 @@ jobs:
     - name: Create appsettings.json
       run: |
         echo '${{ secrets.APPSETTINGS_JSON_CONTENT }}' > ${{ env.WORKING_DIRECTORY }}/appsettings.json
-    - name: Generate Open API Specification Document
-      run: |
-        mkdir -p $(dirname "${{ env.API_IMPORT_SPECIFICATION_PATH }}")
-        dotnet swagger tofile --output "${{ env.API_IMPORT_SPECIFICATION_PATH }}" "${{ env.API_IMPORT_DLL }}" "${{ env.API_IMPORT_VERSION }}"
-        working-directory: ${{ env.WORKING_DIRECTORY }}
     - name: Publish Artifacts
       uses: actions/upload-artifact@v4
       with:
@@ -80,7 +75,14 @@ jobs:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
     - name: Import API into Azure API Management
-      run: az apim api import --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" --resource-group "${{ env.AZURE_APIM_RESOURCEGROUP }}" --service-name "${{ env.AZURE_APIM_SERVICENAME }}" --api-id "${{ env.AZURE_APIM_API_ID }}" --service-url "${{ env.AZURE_APIM_APPSERVICEURL }}" --specification-path "${{ env.API_IMPORT_SPECIFICATION_PATH }}" --specification-format OpenApi --subscription-required false
+      run: |
+        az apim api import --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" \
+        --resource-group "${{ env.AZURE_APIM_RESOURCEGROUP }}" \
+        --service-name "${{ env.AZURE_APIM_SERVICENAME }}" \
+        --api-id "${{ env.AZURE_APIM_API_ID }}" \
+        --service-url "${{ env.AZURE_APIM_APPSERVICEURL }}" \
+        --display-name "Quote Craft API" \
+        --protocols https
     - name: logout
       run: >
         az logout
