--- a/.github/workflows/projectQuotesWebApi.yml
+++ b/.github/workflows/projectQuotesWebApi.yml
@@ -74,16 +74,14 @@ jobs:
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-    - name: Import API into Azure API Management
+    - name: Create API in Azure API Management
       run: |
-        az apim api import --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" \
+        az apim api create --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" \
         --resource-group "${{ env.AZURE_APIM_RESOURCEGROUP }}" \
         --service-name "${{ env.AZURE_APIM_SERVICENAME }}" \
         --api-id "${{ env.AZURE_APIM_API_ID }}" \
         --service-url "${{ env.AZURE_APIM_APPSERVICEURL }}" \
         --display-name "Quote Craft API" \
-        --specification-format "OpenApi" \
-        --specification-path "${{ env.API_IMPORT_SPECIFICATION_PATH }}" \
         --protocols https
     - name: logout
       run: >
