--- a/.github/workflows/projectQuotesWebApi.yml
+++ b/.github/workflows/projectQuotesWebApi.yml
@@ -49,6 +49,9 @@ jobs:
     - name: Create appsettings.json
       run: |
         echo '${{ secrets.APPSETTINGS_JSON_CONTENT }}' > ${{ env.WORKING_DIRECTORY }}/appsettings.json
+    - name: run dotnet tool restore
+      run: |
+        dotnet tool restore
     - name: Generate Swagger JSON
       run: |
         dotnet swagger tofile --output "${{ env.API_IMPORT_SPECIFICATION_PATH }}" --host ${{ env.AZURE_WEBAPP_NAME }}.azurewebsites.net "${{ env.API_IMPORT_DLL }}" "${{ env.API_IMPORT_VERSION }}"
