--- a/.github/workflows/projectQuotesWebApi.yml
+++ b/.github/workflows/projectQuotesWebApi.yml
@@ -79,19 +79,15 @@ jobs:
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-   
-    - name: Import API to Azure API Management
+    - name: Create API in Azure API Management
       run: |
-        az apim api import \
+        az apim api create --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" \
         --resource-group "${{ env.AZURE_APIM_RESOURCEGROUP }}" \
         --service-name "${{ env.AZURE_APIM_SERVICENAME }}" \
         --api-id "${{ env.AZURE_APIM_API_ID }}" \
-        --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" \
-        --display-name "Quote Craft API" \
-        --protocols https \
         --service-url "${{ env.AZURE_APIM_APPSERVICEURL }}" \
-        --specification-format OpenApi \
-        --specification-path "${{ env.API_IMPORT_SPECIFICATION_PATH }}"
+        --display-name "Quote Craft API" \
+        --protocols https
     - name: logout
       run: >
         az logout
