--- a/.github/workflows/projectQuotesWebApi.yml
+++ b/.github/workflows/projectQuotesWebApi.yml
@@ -1,93 +1,93 @@
-# name: Build and deploy .NET Core application to Web App projectQuotesWebApi with API Management Service projectQuotesWebApiapi-projectQuotesWebApi
-# on:
-#   push:
-#     branches:
-#     - master
-# permissions:
-#   id-token: write
-#   contents: read
-# env:
-#   AZURE_WEBAPP_NAME: projectQuotesWebApi
-#   AZURE_WEBAPP_PACKAGE_PATH: projectQuotesWebApi/publish
-#   AZURE_APIM_RESOURCE_PATH: /
-#   AZURE_APIM_RESOURCEGROUP: QuoteCraft
-#   AZURE_APIM_SERVICENAME: projectQuotesWebApiapi
-#   AZURE_APIM_API_ID: projectQuotesWebApi
-#   AZURE_APIM_APPSERVICEURL: https://projectquoteswebapi-c5amgnakecawf3cm.ukwest-01.azurewebsites.net
-#   SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION: 5.6.3
-#   SWASHBUCKLE_DOTNET_CORE_VERSION: 3.1.x
-#   API_IMPORT_SPECIFICATION_PATH: projectQuotesWebApi/publish/swagger.json
-#   API_IMPORT_DLL: projectQuotesWebApi/bin/Release/net9.0/projectQuotesWebApi.dll
-#   API_IMPORT_VERSION: v1
-#   CONFIGURATION: Release
-#   DOTNET_CORE_VERSION: 9.0.x
-#   WORKING_DIRECTORY: projectQuotesWebApi
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - uses: actions/checkout@v4
-#     - name: Setup .NET SDK
-#       uses: actions/setup-dotnet@v4
-#       with:
-#         dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
-#     - name: Setup SwashBuckle .NET Core
-#       uses: actions/setup-dotnet@v4
-#       with:
-#         dotnet-version: ${{ env.SWASHBUCKLE_DOTNET_CORE_VERSION }}
-#     - name: Restore
-#       run: dotnet restore ${{ env.WORKING_DIRECTORY }}
-#     - name: Build
-#       run: dotnet build ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }} --no-restore
-#     - name: Test
-#       run: dotnet test ${{ env.WORKING_DIRECTORY }} --no-build
-#     - name: Publish
-#       run: dotnet publish ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }} --no-build --output ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-#     - name: Install Swashbuckle CLI .NET Global Tool
-#       run: dotnet tool install --global Swashbuckle.AspNetCore.Cli --version ${{ env.SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION }}
-#       working-directory: ${{ env.WORKING_DIRECTORY }}
-#     - name: Create appsettings.json
-#       run: |
-#         echo '${{ secrets.APPSETTINGS_JSON_CONTENT }}' > ${{ env.WORKING_DIRECTORY }}/appsettings.json
-#     - name: Publish
-#       run: dotnet publish ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }} --no-build --output ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-#     - name: Ensure appsettings.json in publish directory
-#       run: |
-#         echo '${{ secrets.APPSETTINGS_JSON_CONTENT }}' > ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/appsettings.json
-#     - name: Publish Artifacts
-#       uses: actions/upload-artifact@v4
-#       with:
-#         name: webapp
-#         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-#   deploy:
-#     runs-on: ubuntu-latest
-#     needs: build
-#     steps:
-#     - name: Download artifact from build job
-#       uses: actions/download-artifact@v4
-#       with:
-#         name: webapp
-#         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-#     - name: Azure Login
-#       uses: azure/login@v2
-#       with:
-#         client-id: ${{ secrets.AZURE_CLIENT_ID }}
-#         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-#         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-#     - name: Deploy to Azure WebApp
-#       uses: azure/webapps-deploy@v2
-#       with:
-#         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-#         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-#     - name: Create API in Azure API Management
-#       run: |
-#         az apim api create --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" \
-#         --resource-group "${{ env.AZURE_APIM_RESOURCEGROUP }}" \
-#         --service-name "${{ env.AZURE_APIM_SERVICENAME }}" \
-#         --api-id "${{ env.AZURE_APIM_API_ID }}" \
-#         --service-url "${{ env.AZURE_APIM_APPSERVICEURL }}" \
-#         --display-name "Quote Craft API" \
-#         --protocols https
-#     - name: logout
-#       run: >
-#         az logout
+name: Build and deploy .NET Core application to Web App projectQuotesWebApi with API Management Service projectQuotesWebApiapi-projectQuotesWebApi
+on:
+  push:
+    branches:
+    - master
+permissions:
+  id-token: write
+  contents: read
+env:
+  AZURE_WEBAPP_NAME: projectQuotesWebApi
+  AZURE_WEBAPP_PACKAGE_PATH: projectQuotesWebApi/publish
+  AZURE_APIM_RESOURCE_PATH: /
+  AZURE_APIM_RESOURCEGROUP: QuoteCraft
+  AZURE_APIM_SERVICENAME: projectQuotesWebApiapi
+  AZURE_APIM_API_ID: projectQuotesWebApi
+  AZURE_APIM_APPSERVICEURL: https://projectquoteswebapi-c5amgnakecawf3cm.ukwest-01.azurewebsites.net
+  SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION: 5.6.3
+  SWASHBUCKLE_DOTNET_CORE_VERSION: 3.1.x
+  API_IMPORT_SPECIFICATION_PATH: projectQuotesWebApi/publish/swagger.json
+  API_IMPORT_DLL: projectQuotesWebApi/bin/Release/net9.0/projectQuotesWebApi.dll
+  API_IMPORT_VERSION: v1
+  CONFIGURATION: Release
+  DOTNET_CORE_VERSION: 9.0.x
+  WORKING_DIRECTORY: projectQuotesWebApi
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setup .NET SDK
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+    - name: Setup SwashBuckle .NET Core
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: ${{ env.SWASHBUCKLE_DOTNET_CORE_VERSION }}
+    - name: Restore
+      run: dotnet restore ${{ env.WORKING_DIRECTORY }}
+    - name: Build
+      run: dotnet build ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }} --no-restore
+    - name: Test
+      run: dotnet test ${{ env.WORKING_DIRECTORY }} --no-build
+    - name: Publish
+      run: dotnet publish ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }} --no-build --output ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    - name: Install Swashbuckle CLI .NET Global Tool
+      run: dotnet tool install --global Swashbuckle.AspNetCore.Cli --version ${{ env.SWASHBUCLE_ASPNET_CORE_CLI_PACKAGE_VERSION }}
+      working-directory: ${{ env.WORKING_DIRECTORY }}
+    - name: Create appsettings.json
+      run: |
+        echo '${{ secrets.APPSETTINGS_JSON_CONTENT }}' > ${{ env.WORKING_DIRECTORY }}/appsettings.json
+    - name: Publish
+      run: dotnet publish ${{ env.WORKING_DIRECTORY }} --configuration ${{ env.CONFIGURATION }} --no-build --output ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    - name: Ensure appsettings.json in publish directory
+      run: |
+        echo '${{ secrets.APPSETTINGS_JSON_CONTENT }}' > ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/appsettings.json
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: webapp
+        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v4
+      with:
+        name: webapp
+        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    - name: Azure Login
+      uses: azure/login@v2
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+    - name: Deploy to Azure WebApp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    - name: Create API in Azure API Management
+      run: |
+        az apim api create --path "${{ env.AZURE_APIM_RESOURCE_PATH }}" \
+        --resource-group "${{ env.AZURE_APIM_RESOURCEGROUP }}" \
+        --service-name "${{ env.AZURE_APIM_SERVICENAME }}" \
+        --api-id "${{ env.AZURE_APIM_API_ID }}" \
+        --service-url "${{ env.AZURE_APIM_APPSERVICEURL }}" \
+        --display-name "Quote Craft API" \
+        --protocols https
+    - name: logout
+      run: >
+        az logout
